--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,19 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20%;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-image: linear-gradient(
+    68deg,
+    hsl(225deg 76% 80%) 50%,
+    hsl(226deg 75% 86%) 50%,
+    hsl(226deg 74% 91%) 50%,
+    hsl(227deg 73% 96%) 50%,
+    hsl(0deg 0% 100%) 99%
+  );
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +29,31 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  box-shadow: inset 0px 0px 0px rgb(0, 0, 0), 0 0 10px rgb(0, 0, 0);
+  background: rgba(192, 205, 243, 0.5);
+  width: 370px;
+  height: 320px;
+  margin: 150px auto;
+  padding-top: 20px;
+  text-align: center;
+  color: #314fd6;
+}
+.card h1,
+.card p {
+  color: #314fd6;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.card input {
+  text-align: center;
+  border: 1px solid black;
+  outline: none;
+  height: 28px;
+  padding: 0 2rem;
+}
+.card button {
+  width: 45%;
+  height: 30px;
+  background-color: #8a8ace;
 }
